--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
         "package-lock.json": true,
         "README.md": true,
         ".vscode": true
-    }
+    },
+    "editor.tabSize": 2
 }
